--- a/views/lead.pug
+++ b/views/lead.pug
@@ -2,4 +2,7 @@ extends layout
 
 block content
   h1 lead
-  p #{lead.email}
+  p 
+    span #{lead.email}
+    | 
+    a(href = "/lead/" + lead.id + "/edit") Edit
