--- a/views/lead.pug
+++ b/views/lead.pug
@@ -1,8 +1,11 @@
 extends layout
 
 block content
-  h1 lead
+  h1 Lead
   p 
     span #{lead.email}
     | 
     a(href = "/lead/" + lead.id + "/edit") Edit
+    | 
+    form(action = "/lead/" + lead.id + "/delete", method = "POST")
+      button(type = "submit") Delete
